"""ajout champs v2

Revision ID: 550bfbc8becb
Revises: 6356ae90fa96
Create Date: 2026-04-29 12:51:45.218893

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '550bfbc8becb'
down_revision: Union[str, Sequence[str], None] = '6356ae90fa96'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('arretmachine',
    sa.Column('id_arret', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_machine', sa.Integer(), nullable=False),
    sa.Column('type_arret', sa.String(length=50), nullable=False),
    sa.Column('date_debut', sa.DateTime(), nullable=False),
    sa.Column('date_fin', sa.DateTime(), nullable=True),
    sa.Column('description', sa.String(length=255), nullable=True),
    sa.ForeignKeyConstraint(['id_machine'], ['machine.id_machine'], ),
    sa.PrimaryKeyConstraint('id_arret')
    )
    op.create_table('livraisonpartielle',
    sa.Column('id_livraison', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_of', sa.Integer(), nullable=False),
    sa.Column('date_livraison', sa.DateTime(), nullable=False),
    sa.Column('quantite', sa.Numeric(precision=10, scale=3), nullable=False),
    sa.Column('commentaire', sa.String(length=255), nullable=True),
    sa.ForeignKeyConstraint(['id_of'], ['ordrefabrication.id_of'], ),
    sa.PrimaryKeyConstraint('id_livraison')
    )
    op.add_column('assemblage', sa.Column('prix_revient', sa.Numeric(precision=10, scale=2), nullable=True))
    op.add_column('commande', sa.Column('numero_externe', sa.String(length=100), nullable=True))
    op.add_column('commande', sa.Column('date_livraison', sa.Date(), nullable=True))
    op.add_column('composant', sa.Column('id_matiere_brut', sa.Integer(), nullable=True))
    op.add_column('composant', sa.Column('forme_brut', sa.String(length=20), nullable=True))
    op.add_column('composant', sa.Column('brut_diametre', sa.Numeric(precision=10, scale=3), nullable=True))
    op.add_column('composant', sa.Column('brut_diam_ext', sa.Numeric(precision=10, scale=3), nullable=True))
    op.add_column('composant', sa.Column('brut_diam_int', sa.Numeric(precision=10, scale=3), nullable=True))
    op.add_column('composant', sa.Column('brut_longueur', sa.Numeric(precision=10, scale=3), nullable=True))
    op.add_column('composant', sa.Column('brut_largeur', sa.Numeric(precision=10, scale=3), nullable=True))
    op.add_column('composant', sa.Column('brut_hauteur', sa.Numeric(precision=10, scale=3), nullable=True))
    op.add_column('composant', sa.Column('brut_epaisseur', sa.Numeric(precision=10, scale=3), nullable=True))
    op.add_column('composant', sa.Column('plan_url', sa.String(length=500), nullable=True))
    op.create_foreign_key(None, 'composant', 'matierepremiere', ['id_matiere_brut'], ['id_matiere'])
    op.add_column('machine', sa.Column('tarif_horaire', sa.Numeric(precision=10, scale=2), nullable=True))
    op.add_column('matierepremiere', sa.Column('poids_volumique', sa.Numeric(precision=10, scale=6), nullable=True))
    op.add_column('matierepremiere', sa.Column('prix_au_kg', sa.Numeric(precision=10, scale=4), nullable=True))
    op.add_column('operation', sa.Column('plan_url', sa.String(length=500), nullable=True))
    op.add_column('ordrefabrication', sa.Column('date_fin_reelle', sa.DateTime(), nullable=True))
    op.add_column('ordrefabrication', sa.Column('priorite', sa.Integer(), nullable=False, server_default='5'))
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_column('ordrefabrication', 'priorite')
    op.drop_column('ordrefabrication', 'date_fin_reelle')
    op.drop_column('operation', 'plan_url')
    op.drop_column('matierepremiere', 'prix_au_kg')
    op.drop_column('matierepremiere', 'poids_volumique')
    op.drop_column('machine', 'tarif_horaire')
    op.drop_constraint(None, 'composant', type_='foreignkey')
    op.drop_column('composant', 'plan_url')
    op.drop_column('composant', 'brut_epaisseur')
    op.drop_column('composant', 'brut_hauteur')
    op.drop_column('composant', 'brut_largeur')
    op.drop_column('composant', 'brut_longueur')
    op.drop_column('composant', 'brut_diam_int')
    op.drop_column('composant', 'brut_diam_ext')
    op.drop_column('composant', 'brut_diametre')
    op.drop_column('composant', 'forme_brut')
    op.drop_column('composant', 'id_matiere_brut')
    op.drop_column('commande', 'date_livraison')
    op.drop_column('commande', 'numero_externe')
    op.drop_column('assemblage', 'prix_revient')
    op.drop_table('livraisonpartielle')
    op.drop_table('arretmachine')
    # ### end Alembic commands ###
