"""creation initiale

Revision ID: 6356ae90fa96
Revises: 
Create Date: 2026-04-28 12:06:40.570398

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '6356ae90fa96'
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('assemblage',
    sa.Column('id_assemblage', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nom', sa.String(length=255), nullable=False),
    sa.Column('reference', sa.String(length=100), nullable=True),
    sa.Column('description', sa.String(), nullable=True),
    sa.PrimaryKeyConstraint('id_assemblage')
    )
    op.create_table('commande',
    sa.Column('id_commande', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('date_commande', sa.Date(), nullable=False),
    sa.Column('client', sa.String(length=255), nullable=False),
    sa.Column('statut', sa.String(length=50), nullable=False),
    sa.PrimaryKeyConstraint('id_commande')
    )
    op.create_table('composant',
    sa.Column('id_composant', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nom', sa.String(length=255), nullable=False),
    sa.Column('type', sa.String(length=50), nullable=True),
    sa.Column('description', sa.String(), nullable=True),
    sa.PrimaryKeyConstraint('id_composant')
    )
    op.create_table('machine',
    sa.Column('id_machine', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nom', sa.String(length=255), nullable=False),
    sa.Column('type', sa.String(length=100), nullable=True),
    sa.Column('capacite_h_jour', sa.Numeric(precision=5, scale=2), nullable=True),
    sa.Column('statut', sa.String(length=50), nullable=False),
    sa.PrimaryKeyConstraint('id_machine')
    )
    op.create_table('matierepremiere',
    sa.Column('id_matiere', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nom', sa.String(length=255), nullable=False),
    sa.Column('unite', sa.String(length=50), nullable=False),
    sa.Column('stock_actuel', sa.Numeric(precision=10, scale=3), nullable=False),
    sa.PrimaryKeyConstraint('id_matiere')
    )
    op.create_table('gamme',
    sa.Column('id_gamme', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_composant', sa.Integer(), nullable=False),
    sa.Column('version', sa.Integer(), nullable=False),
    sa.Column('active', sa.Boolean(), nullable=False),
    sa.ForeignKeyConstraint(['id_composant'], ['composant.id_composant'], ),
    sa.PrimaryKeyConstraint('id_gamme')
    )
    op.create_table('lignecommande',
    sa.Column('id_ligne', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_commande', sa.Integer(), nullable=False),
    sa.Column('id_assemblage', sa.Integer(), nullable=False),
    sa.Column('quantite', sa.Numeric(precision=10, scale=3), nullable=False),
    sa.ForeignKeyConstraint(['id_assemblage'], ['assemblage.id_assemblage'], ),
    sa.ForeignKeyConstraint(['id_commande'], ['commande.id_commande'], ),
    sa.PrimaryKeyConstraint('id_ligne')
    )
    op.create_table('nomenclature',
    sa.Column('id_parent', sa.Integer(), nullable=False),
    sa.Column('type_parent', sa.String(length=20), nullable=False),
    sa.Column('id_composant', sa.Integer(), nullable=False),
    sa.Column('quantite', sa.Numeric(precision=10, scale=3), nullable=False),
    sa.ForeignKeyConstraint(['id_composant'], ['composant.id_composant'], ),
    sa.PrimaryKeyConstraint('id_parent', 'type_parent', 'id_composant')
    )
    op.create_table('ofassemblage',
    sa.Column('id_of_assemblage', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_ligne', sa.Integer(), nullable=False),
    sa.Column('id_assemblage', sa.Integer(), nullable=False),
    sa.Column('quantite', sa.Numeric(precision=10, scale=3), nullable=False),
    sa.Column('date_lancement', sa.DateTime(), nullable=True),
    sa.Column('date_fin_prevue', sa.DateTime(), nullable=True),
    sa.Column('statut', sa.String(length=50), nullable=False),
    sa.ForeignKeyConstraint(['id_assemblage'], ['assemblage.id_assemblage'], ),
    sa.ForeignKeyConstraint(['id_ligne'], ['lignecommande.id_ligne'], ),
    sa.PrimaryKeyConstraint('id_of_assemblage')
    )
    op.create_table('operation',
    sa.Column('id_operation', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_gamme', sa.Integer(), nullable=False),
    sa.Column('id_machine', sa.Integer(), nullable=False),
    sa.Column('ordre', sa.Integer(), nullable=False),
    sa.Column('description', sa.String(length=255), nullable=True),
    sa.Column('tps_preparation', sa.Integer(), nullable=False),
    sa.Column('tps_execution', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['id_gamme'], ['gamme.id_gamme'], ),
    sa.ForeignKeyConstraint(['id_machine'], ['machine.id_machine'], ),
    sa.PrimaryKeyConstraint('id_operation')
    )
    op.create_table('operationmatiere',
    sa.Column('id_operation', sa.Integer(), nullable=False),
    sa.Column('id_matiere', sa.Integer(), nullable=False),
    sa.Column('quantite', sa.Numeric(precision=10, scale=3), nullable=False),
    sa.ForeignKeyConstraint(['id_matiere'], ['matierepremiere.id_matiere'], ),
    sa.ForeignKeyConstraint(['id_operation'], ['operation.id_operation'], ),
    sa.PrimaryKeyConstraint('id_operation', 'id_matiere')
    )
    op.create_table('ordrefabrication',
    sa.Column('id_of', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_of_assemblage', sa.Integer(), nullable=False),
    sa.Column('id_composant', sa.Integer(), nullable=False),
    sa.Column('id_of_parent', sa.Integer(), nullable=True),
    sa.Column('type_of', sa.String(length=50), nullable=False),
    sa.Column('quantite', sa.Numeric(precision=10, scale=3), nullable=False),
    sa.Column('date_lancement', sa.DateTime(), nullable=True),
    sa.Column('date_fin_prevue', sa.DateTime(), nullable=True),
    sa.Column('statut', sa.String(length=50), nullable=False),
    sa.ForeignKeyConstraint(['id_composant'], ['composant.id_composant'], ),
    sa.ForeignKeyConstraint(['id_of_assemblage'], ['ofassemblage.id_of_assemblage'], ),
    sa.ForeignKeyConstraint(['id_of_parent'], ['ordrefabrication.id_of'], ),
    sa.PrimaryKeyConstraint('id_of')
    )
    op.create_table('operationplanifiee',
    sa.Column('id_op_plan', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_of', sa.Integer(), nullable=False),
    sa.Column('id_operation', sa.Integer(), nullable=False),
    sa.Column('id_machine', sa.Integer(), nullable=False),
    sa.Column('date_debut', sa.DateTime(), nullable=True),
    sa.Column('date_fin', sa.DateTime(), nullable=True),
    sa.Column('date_debut_reelle', sa.DateTime(), nullable=True),
    sa.Column('date_fin_reelle', sa.DateTime(), nullable=True),
    sa.Column('tps_prep_reel', sa.Integer(), nullable=True),
    sa.Column('tps_exec_reel', sa.Integer(), nullable=True),
    sa.Column('statut', sa.String(length=50), nullable=False),
    sa.ForeignKeyConstraint(['id_machine'], ['machine.id_machine'], ),
    sa.ForeignKeyConstraint(['id_of'], ['ordrefabrication.id_of'], ),
    sa.ForeignKeyConstraint(['id_operation'], ['operation.id_operation'], ),
    sa.PrimaryKeyConstraint('id_op_plan')
    )
    op.create_table('rebut',
    sa.Column('id_rebut', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_of', sa.Integer(), nullable=False),
    sa.Column('id_op_plan', sa.Integer(), nullable=False),
    sa.Column('date_constat', sa.DateTime(), nullable=False),
    sa.Column('quantite_rebutee', sa.Numeric(precision=10, scale=3), nullable=False),
    sa.Column('cause', sa.String(length=255), nullable=True),
    sa.Column('decision', sa.String(length=50), nullable=False),
    sa.ForeignKeyConstraint(['id_of'], ['ordrefabrication.id_of'], ),
    sa.ForeignKeyConstraint(['id_op_plan'], ['operationplanifiee.id_op_plan'], ),
    sa.PrimaryKeyConstraint('id_rebut')
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('rebut')
    op.drop_table('operationplanifiee')
    op.drop_table('ordrefabrication')
    op.drop_table('operationmatiere')
    op.drop_table('operation')
    op.drop_table('ofassemblage')
    op.drop_table('nomenclature')
    op.drop_table('lignecommande')
    op.drop_table('gamme')
    op.drop_table('matierepremiere')
    op.drop_table('machine')
    op.drop_table('composant')
    op.drop_table('commande')
    op.drop_table('assemblage')
    # ### end Alembic commands ###
